sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1b/errors.dfrouter
Error: Edge 'xxx' used by detector 'MQ11Fs2' is not known.
Quitting (on error).
